# mandelbrot

./: Cargo.toml
src/: main.rs
