[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Ponas <mykolas.peteraitis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.21.2"
time = "0.1"
rayon = "1.1.0"
num = "0.2.0"
minifb = "0.8.4"